# BuildArena

./: .gitignore  LICENSE  README.md  intro.ipynb  levels.yaml  prompt.yaml  pyproject.toml
agents/: __init__.py
analyze/: sampling_path_analysis.py  sim_common.py  sim_lift.py  sim_support.py  sim_transport.py
asset/: support_hard.blv  support_medium.blv  support_soft.blv
blocks/configs/: ballast_.yaml  brace.yaml  powered_wheel.yaml  small_wooden_block.yaml  starting_block.yaml  torch.yaml  water_cannon.yaml  winch.yaml
blocks/descriptors/: torch.py  water_cannon.py
scheduler/: runner.py  scheduler.py  task_db.py  worker.py
script/: find_coords.py  run_construction.py  run_simulation.py
simulation/: operations.py  simulation_lift.py  simulation_support.py  simulation_transport.py
spatial/: agent.py  build.py  components.py  utils.py
